Bug 253262 - [JSC] Fix floating point negation in WasmBBQJIT
Summary: [JSC] Fix floating point negation in WasmBBQJIT
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yusuke Suzuki
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-02 13:41 PST by Yusuke Suzuki
Modified: 2023-03-02 15:17 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yusuke Suzuki 2023-03-02 13:41:02 PST
...
Comment 1 Radar WebKit Bug Importer 2023-03-02 13:41:16 PST
<rdar://problem/106161437>
Comment 2 Yusuke Suzuki 2023-03-02 13:45:37 PST
Pull request: https://github.com/WebKit/WebKit/pull/10956
Comment 3 EWS 2023-03-02 15:17:01 PST
Committed 261102@main (f357cb4e9967): <https://commits.webkit.org/261102@main>

Reviewed commits have been landed. Closing PR #10956 and removing active labels.