[JSC] Fix floating point negation in WasmBBQJIT https://bugs.webkit.org/show_bug.cgi?id=253262 rdar://106161437

Reviewed by Justin Michaud.

This patch aligns WasmBBQJIT to exactly how f32 / f64 negation is implemented in Air.
This is required since wasm cares NaN's bit patterns.

* Source/JavaScriptCore/wasm/WasmBBQJIT.cpp:
(JSC::Wasm::BBQJIT::addF32Neg):
(JSC::Wasm::BBQJIT::addF64Neg):

Canonical link: https://commits.webkit.org/261102@main